# SolIot

./: README.md
Soliot-NextApp/: package-lock.json  package.json  tailwind.config.js
Soliot-NextApp/components/: Header.js  InitializeRegistry.js  NodeStatusDetails.js  NodeStatusRow.js  RegisterNode.js  UpdateNode.js
Soliot-NextApp/context/: WalletContext.js  context.js
Soliot-NextApp/pages/: _app.js  index.js
Soliot-NextApp/styles/: Header.module.css  Home.module.css  globals.css
Soliot-NextApp/utils/: constants.js  helper.js  idl.json  program.js
Soliot-Rust-Client/soliot-rust-client/: Cargo.toml  sample.env
Soliot-Rust-Client/soliot-rust-client/src/: main.rs
Soliot-Smart-Contract/: Anchor.toml
Soliot-Smart-Contract/programs/soliot-smart-contract/: Cargo.toml
Soliot-Smart-Contract/programs/soliot-smart-contract/src/: constants.rs  error.rs  lib.rs
Soliot-Smart-Contract/tests/: soliot-smart-contract.ts  soliot-smart-contract.ts:Zone.Identifier
