[package]
name = "soliot-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.10.0"
solana-sdk = "1.10.0"
borsh = "0.9.0"
tokio = { version = "1.0", features = ["full"] }
anchor-lang = "0.28.0"
sha2 = "0.9"
