[package]
name = "soliot-smart-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soliot_smart_contract"

[toolchain]
channel = "stable"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
solana-program = "=1.9.29"
bumpalo = "3.15.0"
getrandom = { version = "0.1.14", features = ["dummy"] }
atty = "0.2"
termcolor = "1.1"